--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   ],
   "scripts": {
     "start": "styleguidist server",
-    "test": "jest",
     "build": "rollup -c",
     "prepublishOnly": "rm -rf lib && npm run build",
     "postbuild": "npm pack && tar -xvzf *.tgz && rm -rf package *.tgz",
@@ -23,33 +22,41 @@
     "@emotion/core": "10.x",
     "@emotion/styled": "10.x",
     "react": "^16.x",
-    "react-dom": "^16.x"
+    "react-dom": "^16.x",
+    "react-test-renderer": "^16.10.2"
   },
   "devDependencies": {
     "@babel/core": "^7.6.4",
     "@babel/preset-env": "^7.6.3",
     "@babel/preset-react": "^7.6.3",
+    "@babel/register": "^7.6.2",
     "@emotion/core": "^10.0.21",
     "@emotion/styled": "^10.0.17",
     "@testing-library/react": "^9.3.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-emotion": "^10.0.21",
-    "babel-register": "^6.26.0",
     "canvas": "^2.6.0",
     "chai": "^4.2.0",
     "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "eslint": "^5.6.0",
+    "gh-pages": "^0.12.0",
     "gulp": "^4.0.2",
     "gulp-rename": "^1.4.0",
+    "gulp-replace": "^0.5.4",
     "husky": "^3.0.9",
     "jest": "^24.9.0",
     "jest-emotion": "^10.0.17",
     "jsdom": "^15.2.0",
+    "lint-staged": "^7.2.2",
+    "mocha": "^2.5.3",
     "prettier": "^1.18.2",
     "prettier-standard": "^15.0.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-helmet": "^5.2.1",
     "react-styleguidist": "^9.1.16",
+    "react-test-renderer": "^16.10.2",
     "rollup": "^1.24.0",
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-commonjs": "^10.1.0",
@@ -57,6 +64,7 @@
     "rollup-plugin-peer-deps-external": "^2.2.0",
     "rollup-plugin-terser": "^5.1.2",
     "rollup-plugin-uglify": "^6.0.3",
+    "sinon": "^4.5.0",
     "standard": "^14.3.1",
     "webpack": "^4.41.2"
   },
@@ -71,6 +79,29 @@
     "query-string": "4.3.4",
     "react-modal": "^3.2.1",
     "react-onclickoutside": "^6.7.1",
-    "react-slick": "^0.18.1"
+    "react-slick": "^0.18.1",
+    "react-test-renderer": "^16.10.2"
+  },
+  "standard": {
+    "ignore": [
+      "source/**/**/__tests__/*.js",
+      "test",
+      "gulpfile.js"
+    ],
+    "globals": [
+      "it",
+      "describe",
+      "mount",
+      "expect",
+      "utils"
+    ]
+  },
+  "lint-staged": {
+    "linters": {
+      "source/**/*.js": [
+        "prettier-standard",
+        "git add"
+      ]
+    }
   }
 }
