--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "blackbox-react",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "Blackbox React Components Library",
   "homepage": "https://somigian.github.io/blackbox-react/",
   "repository": "https://github.com/somigian/blackbox-react",
@@ -13,6 +13,7 @@
   "scripts": {
     "start": "styleguidist server",
     "build": "rollup -c",
+    "test": "mocha src/components/**/__tests__/*.js",
     "prepublishOnly": "rm -rf lib && npm run build",
     "postbuild": "npm pack && tar -xvzf *.tgz && rm -rf package *.tgz",
     "docs:build": "styleguidist build"
@@ -24,8 +25,7 @@
     "@emotion/core": "10.x",
     "@emotion/styled": "10.x",
     "react": "^16.x",
-    "react-dom": "^16.x",
-    "react-test-renderer": "^16.10.2"
+    "react-dom": "^16.x"
   },
   "devDependencies": {
     "@babel/core": "^7.6.4",
@@ -34,12 +34,11 @@
     "@babel/register": "^7.6.2",
     "@emotion/core": "^10.0.21",
     "@emotion/styled": "^10.0.17",
-    "@testing-library/react": "^9.3.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-emotion": "^10.0.21",
     "canvas": "^2.6.0",
     "chai": "^4.2.0",
-    "enzyme": "^3.10.0",
+    "enzyme": "^3.2.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^5.6.0",
     "gh-pages": "^0.12.0",
@@ -47,9 +46,7 @@
     "gulp-rename": "^1.4.0",
     "gulp-replace": "^0.5.4",
     "husky": "^3.0.9",
-    "jest": "^24.9.0",
-    "jest-emotion": "^10.0.17",
-    "jsdom": "^15.2.0",
+    "jsdom": "^11.5.1",
     "lint-staged": "^7.2.2",
     "mocha": "^2.5.3",
     "prettier": "^1.18.2",
@@ -58,7 +55,6 @@
     "react-dom": "^16.10.2",
     "react-helmet": "^5.2.1",
     "react-styleguidist": "^9.1.16",
-    "react-test-renderer": "^16.10.2",
     "rollup": "^1.24.0",
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-commonjs": "^10.1.0",
@@ -81,8 +77,7 @@
     "query-string": "4.3.4",
     "react-modal": "^3.2.1",
     "react-onclickoutside": "^6.7.1",
-    "react-slick": "^0.18.1",
-    "react-test-renderer": "^16.10.2"
+    "react-slick": "^0.25.2"
   },
   "standard": {
     "ignore": [
